--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,8 +1,8 @@
 <h2>{{hero.name | uppercase}} Details</h2>
+<div><span>id: </span>{{hero.id}}</div>
 <div>
   <label>name: 
-    <input {(ngModel)}= "hero.name" placeholder="name">
+    <input [(ngModel)]= "hero.name" placeholder="name">
   </label>
 </div>
-<div><span>id: </span>{{hero.id}}</div>
-<div><span>name: </span>{{hero.name}}</div>
+
