--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,5 +1,5 @@
 <h2>My Heroes</h2>
-<ul class="Heroes">
+<ul class="heroes">
 <li *ngFor="let hero of heroes" 
 [class.selected]="hero === selectedHero"
 (click)="onSelect(hero)">
