--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ h1 {
   }
   body {
     margin: 2em;
+    background-color: rgb(87, 233, 20);
   }
   body, input[text], button {
     color: #888;
